--- a/main.html
+++ b/main.html
@@ -5,10 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
     <link rel="stylesheet" href="style.css" />
+	  <style>
+		  table{
+			  border-collapse: collapse;
+			  border: 1px solid black;
+		  }
+	  </style>
   </head>
   <body>
     <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-    </table>
+		<tr>
+			<td>
+				<table>
+					<tr>
+						<th>Nested Table 2</th>
+					
+					</tr>
+					<tr>
+						<th>Column 1</th>
+						<th>Column 2</th>
+					</tr>
+					<tr>
+						<td>abc</td>
+						<td>def</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<table>
+					<tr>
+						<th>Nested Table 1</th>
+					</tr>
+					<tr>
+						<td>
+							<ul>
+								<li>List item 1</li>
+								<li>List item 2</li>
+								<li>List item 3</li>
+							</ul>
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+				<tr>
+					<td>
+						<table>
+							<tr>
+								<th style="content-align:center;">Nested Table 3</th>
+							</tr>
+							<tr>
+								<td style="color:blue;">Nested Table</td>
+								<td>Demo Continued</td>
+							</tr>
+						</table>
+					</td>
+					<td>
+						<table>
+							<tr>
+								<th>Nested Table 4</th>
+							</tr>
+							<tr>
+								<td style="background-color:black; color:white;">HTML</td>
+							</tr>
+						</table>
+					</td>
+				</tr>		
+	</table>					
   </body>
 </html>
